<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="above">Above</string>
    <string name="above_target_level">Above target level</string>
    <string name="accept">Accept</string>
    <string name="add_email">Add Email</string>
    <string name="alcohol">Alcohol</string>
    <string name="alert">Alert</string>
    <string name="alert_detail_glucose_value">Glucose Value:</string>
    <string name="alert_detail_threshold">Threshold:</string>
    <string name="alert_notice">Alert Notice</string>
    <string name="alert_settings">Alert settings</string>
    <string name="all">All</string>
    <string name="allergy">Allergy</string>
    <string name="and">and</string>
    <string name="android_device_info">Android Device Info</string>
    <string name="android_version">Android Version</string>
    <string name="app_name">Aes-crypto</string>
    <string name="app_update_body">An upgrade is available for your Eversense App. Would you like to install it now?</string>
    <string name="app_update_title">Upgrade Eversense App</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="auto_sync_enabled_text">"Auto Sync is Enabled.
Your data will be synced to the server every 2 hours."</string>
    <string name="auto_sync_enabled_text_2">"Auto Sync is Enabled.
Your data will be synced to the server every %1$d minutes."</string>
    <string name="average">Average</string>
    <string name="avg">Avg.</string>
    <string name="battery_level">Battery Level</string>
    <string name="below">Below</string>
    <string name="below_target_level">Below target level</string>
    <string name="between">between</string>
    <string name="ble_not_supported">Bluetooth low energy is not supported</string>
    <string name="bluetooth_is_off">Bluetooth is OFF</string>
    <string name="bluetooth_pairing">Bluetooth Pairing</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="breakfast">Breakfast</string>
    <string name="cal_accepted_in_progress_message">Please do not remove the transmitter from the sensor site for %1$d minutes. If the Transmitter is removed, the calibration must be repeated.</string>
    <string name="cal_accepted_in_progress_suspicious_message">"Please do not remove the transmitter from the sensor site for %1$d minutes. If the transmitter is removed, the calibration must be repeated.

Important: The calibration value of %2$s is very different from the sensor glucose. Once calibration is complete, the system may prompt you to enter a new calibration."</string>
    <string name="cal_accepted_in_progress_title">Calibration in Progress</string>
    <string name="cal_accepted_message_2">"Your blood glucose value has been successfully used for calibration.

Warning: Your Transmitter should not be removed from the sensor for %1$d minutes. If the Transmitter is removed, the calibration will need to be repeated."</string>
    <string name="cal_accepted_title">Calibration Accepted</string>
    <string name="cal_in_progress">Calibration in progress (%1$d min, %2$d sec)</string>
    <string name="cal_not_entered_message">Your blood glucose value has been recorded, but was not entered for calibration.</string>
    <string name="cal_not_entered_title">Calibration Not Entered</string>
    <string name="cal_not_used_reason_text">Reason Not Used for Calibration</string>
    <string name="cal_rejected_auto_link_message">Your blood glucose value was not used for calibration because Auto Link Mode is active. Please disable Auto Link Mode before entering a calibration.</string>
    <string name="cal_rejected_auto_link_title">"Calibration Rejected
(Auto Link Mode)"</string>
    <string name="cal_rejected_blinded_message_2">Your blood glucose value was not used for calibration. Please wait %1$d hour(s) and try again.</string>
    <string name="cal_rejected_blinded_title">"Calibration Rejected
(Blinded)"</string>
    <string name="cal_rejected_cannot_be_used_title">Calibration Cannot be Used</string>
    <string name="cal_rejected_change_rapid_message">The system is unable to use this calibration value because your glucose is changing too rapidly. Please calibrate again when glucose rate of change is more steady. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_data_message_2">Your blood glucose value not used for calibration because not enough Sensor Glucose data exists. Please ensure your Transmitter is placed over the sensor, wait %1$d minutes, and try again.</string>
    <string name="cal_rejected_data_message_3">Your blood glucose value was not used for calibration because not enough Sensor Glucose data exists. Please ensure your Transmitter is placed over the sensor, wait %1$d minutes, and try again.</string>
    <string name="cal_rejected_data_title">"Calibration Rejected
(Not Enough Data)"</string>
    <string name="cal_rejected_high_message">Blood glucose values more than %1$s cannot be used for calibration. Please take appropriate action and calibrate again when glucose is between %2$s and %3$s. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_low_message">Blood glucose values less than %1$s cannot be used for calibration. Please take appropriate action and calibrate again when glucose is between %2$s and %3$s. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_not_ready_message_2">Your blood glucose value was not used for calibration because the sample was taken prior to when the Transmitter was ready to accept calibration. Please wait %1$d minutes and try again.</string>
    <string name="cal_rejected_not_ready_title">"Calibration Rejected
(Not Ready)"</string>
    <string name="cal_rejected_other_message">Your blood glucose value was not used for calibration due to an unknown failure.</string>
    <string name="cal_rejected_other_title">"Calibration Rejected
(Other Failure)"</string>
    <string name="cal_rejected_rate_message_2">Your blood glucose value was not used for calibration because the glucose rate is changing too rapidly. Please wait %1$d hour(s) and try again.</string>
    <string name="cal_rejected_rate_title">"Calibration Rejected
(High Rate of Change)"</string>
    <string name="cal_rejected_replacement_message">Your blood glucose value was not used for calibration because your Sensor needs to be replaced. Please contact your physician to have your Sensor replaced.</string>
    <string name="cal_rejected_replacement_title">"Calibration Rejected
(Sensor Replacement Required)"</string>
    <string name="cal_rejected_sensor_replace_message">The system is unable to use this calibration value because your sensor needs to be replaced. This entry will be logged as a BG entry.</string>
    <string name="cal_rejected_too_different_message_2">Your entered calibration value of %1$s may be inaccurate. Please calibrate again in %2$d hour to ensure glucose accuracy.</string>
    <string name="cal_rejected_too_different_title">Calibration Under Review</string>
    <string name="cal_rejected_too_high_message_2">Blood glucose values over %1$s cannot be used for calibration. Please take appropriate action and try again in %2$d hour(s).</string>
    <string name="cal_rejected_too_high_title">"Calibration Rejected
(Too High)"</string>
    <string name="create_an_account">Create an account</string>
    <string name="dosing_welcome_text_2">"This short introduction will help you understand when to use the CGM system to make treatment decisions.

You should use your meter to make treatment decisions until you understand how the duration of insulin action impacts your glucose in different situations.

Refer to your Eversense CGM System User Guide for complete information on making treatment decisions using your CGM System."</string>
    <string name="dosing_welcome_title">Welcome to the Eversense CGM Mobile App.</string>
    <string name="email">Email</string>
    <string name="end">End</string>
    <string name="evening">Evening</string>
    <string name="forgot_my_password">Forgot my password</string>
    <string name="high">High</string>
    <string name="image_description">Image</string>
    <string name="invitation_sent_label">Invitation Sent</string>
    <string name="log_in">Log In</string>
    <string name="low">Low</string>
    <string name="meal_start_end_time_text">Please select START and END time</string>
    <string name="mg_Dl">mg/dL</string>
    <string name="mmol_L">mmol/L</string>
    <string name="morning">Morning</string>
    <string name="nickname_label">Nickname</string>
    <string name="password">Password</string>
    <string name="period">Period</string>
    <string name="remove">Remove</string>
    <string name="send">Send</string>
    <string name="share_my_data">Share My Data</string>
    <string name="start">Start</string>
    <string name="stddev">Std Dev</string>
    <string name="unit_descriptive_text_mgdl_mmol" formatted="false">If you wish to change your unit of measurement to<b> %value%</b>, you can only do so at this time. Before changing this setting, please consult with your doctor if you are unsure what your unit of measurement should be.</string>
    <string name="unit_example_text_mgdl">Example: 160 &lt;b>mg/dL&lt;/b> (or anywhere in the &lt;b>40–400 mg/dL&lt;/b> range)</string>
    <string name="unit_glucose_reading_text_mgdl_mmol_2" formatted="false">The glucose reading has been<b> %value%</b> to be displayed in the unit of measurement shown below.</string>
    <string name="unit_selected_text" formatted="false">Unit of Measurement:<b> %value%</b></string>
    <string name="unit_title">UNIT OF MEASUREMENT</string>
</resources>