<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:background="@color/graph_white" android:paddingTop="@dimen/box_margin" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
        <android.support.design.widget.TextInputLayout android:textColorHint="@color/light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintTextAppearance="@style/InputLayout.HintText" style="@style/InputLayout">
            <com.senseonics.view.NonSelectionEditText android:id="@id/username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email" android:cursorVisible="true" android:maxLines="1" android:maxLength="256" android:inputType="textVisiblePassword|textNoSuggestions" android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:textColorHint="@color/light_gray" android:layout_width="fill_parent" android:layout_height="wrap_content" app:hintTextAppearance="@style/InputLayout.HintText" style="@style/InputLayout">
            <com.senseonics.view.NonSelectionEditText android:id="@id/password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password" android:cursorVisible="true" android:maxLines="1" android:maxLength="256" android:inputType="textPassword" android:textCursorDrawable="@null" />
        </android.support.design.widget.TextInputLayout>
        <RelativeLayout android:orientation="horizontal" android:padding="@dimen/small_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/medium_text" android:textStyle="italic" android:textColor="@color/blue" android:id="@id/create_account_hyperlink" android:padding="@dimen/small_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/create_an_account" android:layout_alignParentStart="true" />
            <TextView android:textSize="@dimen/medium_text" android:textStyle="italic" android:textColor="@color/blue" android:layout_gravity="end" android:id="@id/forgot_password_hyperlink" android:padding="@dimen/small_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/forgot_my_password" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
    <Button android:id="@id/loginButton" android:layout_margin="@dimen/medium_margin" android:text="@string/log_in" style="@style/LargeButtonWhiteText.Blue" />
</LinearLayout>