<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/box_margin">
        <TextView android:textSize="@dimen/large_text" android:textStyle="bold" android:textColor="@color/black" android:gravity="left" android:id="@id/mealTimeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/box_margin" android:text="@string/meal_start_end_time_text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:background="@android:color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/box_margin">
        <View android:background="@color/blue" android:layout_width="fill_parent" android:layout_height="2.0dip" />
        <RelativeLayout android:id="@id/startTimetPicker" android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.Holo.Button.Borderless">
            <TextView android:textSize="@dimen/large_text" android:textColor="@color/black" android:id="@id/startTimeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start" android:layout_alignParentLeft="true" />
            <TextView android:textSize="@dimen/large_text" android:textColor="@color/black" android:id="@id/startTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/arrowStartTime" />
            <ImageView android:id="@id/arrowStartTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/event_box_text_margin" android:src="@drawable/list_item_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/morning" />
        </RelativeLayout>
        <View android:background="@color/gray_horizontal_divider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
        <RelativeLayout android:id="@id/endTimePicker" android:padding="@dimen/event_box_text_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.Holo.Button.Borderless">
            <TextView android:textSize="@dimen/large_text" android:textColor="@color/black" android:id="@id/endTimeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/end" android:layout_alignParentLeft="true" />
            <TextView android:textSize="@dimen/large_text" android:textColor="@color/black" android:id="@id/endTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/arrowEndTime" />
            <ImageView android:id="@id/arrowEndTime" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/event_box_text_margin" android:src="@drawable/list_item_arrow" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/evening" />
        </RelativeLayout>
        <View android:background="@color/blue" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    </LinearLayout>
</LinearLayout>