<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/gray_bg" android:padding="@dimen/medium_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/user_image_and_name_container" android:layout_width="fill_parent" android:layout_height="100.0dip">
        <de.hdodenhof.circleimageview.CircleImageView android:id="@id/user_image" android:layout_width="80.0dip" android:layout_height="80.0dip" android:src="@drawable/ic_user" android:layout_centerVertical="true" android:layout_alignParentStart="true" />
        <TextView android:textSize="@dimen/extra_large_text" android:textStyle="bold" android:textColor="@color/black" android:id="@id/user_display_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin" android:layout_marginStart="@dimen/medium_margin" android:layout_toEndOf="@id/user_image" />
    </RelativeLayout>
    <TextView android:textSize="@dimen/medium_text" android:textColor="@color/blue" android:id="@id/nickname_label" android:paddingBottom="@dimen/box_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/box_margin" android:text="@string/nickname_label" />
    <TextView android:textSize="@dimen/medium_text" android:textColor="@color/black" android:id="@id/nickname" android:paddingBottom="@dimen/box_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/medium_text" android:textColor="@color/blue" android:id="@id/email_label" android:paddingBottom="@dimen/box_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/box_margin" android:text="@string/email" />
    <TextView android:textSize="@dimen/medium_text" android:textColor="@color/black" android:id="@id/email" android:paddingBottom="@dimen/box_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/switch_container" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/box_margin">
        <TextView android:textSize="@dimen/medium_text" android:textColor="@color/blue" android:gravity="center_vertical" android:id="@id/shareMyData_label" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_my_data" android:layout_centerVertical="true" />
        <Switch android:id="@id/shareMyData" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerVertical="true" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <Button android:id="@id/removeButton" android:layout_marginTop="@dimen/medium_margin" android:text="@string/remove" style="@style/LargeButtonWhiteText.Red" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/medium_margin">
        <TextView android:textSize="@dimen/medium_text" android:textStyle="bold" android:textColor="@color/black" android:id="@id/invitations_sent_label" android:paddingBottom="@dimen/box_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/invitation_sent_label" android:layout_marginEnd="5.0dip" />
        <TextView android:textSize="@dimen/medium_text" android:textStyle="bold" android:textColor="@color/black" android:id="@id/invitationDate" android:paddingBottom="@dimen/box_margin" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>