<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:background="@color/gray_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="@dimen/box_margin" android:weightSum="3.0">
            <LinearLayout android:gravity="top" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/box_margin" android:layout_weight="1.0" android:layout_above="@id/radioButtons">
                <TextView android:textSize="@dimen/extra_large_text" android:textColor="@color/black" android:id="@id/unitTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/box_margin" android:text="@string/unit_title" />
                <TextView android:textSize="@dimen/medium_text" android:textColor="@color/black" android:id="@id/unitReadingText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/box_margin" android:text="@string/unit_glucose_reading_text_mgdl_mmol_2" />
                <TextView android:textSize="@dimen/medium_text" android:textColor="@color/black" android:id="@id/unitMeasurement" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/box_margin" android:layout_marginBottom="@dimen/box_margin" android:text="@string/unit_selected_text" />
                <TextView android:textSize="@dimen/medium_text" android:textColor="@color/black" android:id="@id/unitExampleText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/unit_example_text_mgdl" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/radioButtons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/box_margin" android:layout_weight="1.0" android:layout_centerInParent="true">
                <View android:background="@color/gray_darker" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/small_margin" android:layout_marginRight="@dimen/small_margin" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:weightSum="10.0">
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="8.8">
                        <TextView android:textSize="@dimen/extra_large_text" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="left" android:id="@id/textMgDL" android:padding="@dimen/box_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mg_Dl" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <CheckBox android:layout_gravity="right" android:id="@id/radioMgDL" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/gray_darker" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/small_margin" android:layout_marginRight="@dimen/small_margin" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/radioButtonLayout2" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:baselineAligned="false" android:weightSum="10.0">
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="8.8">
                        <TextView android:textSize="@dimen/extra_large_text" android:textStyle="bold" android:textColor="@color/black" android:layout_gravity="left" android:id="@id/textMmol" android:padding="@dimen/box_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mmol_L" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <CheckBox android:layout_gravity="right" android:id="@id/radioMmol" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
                <View android:background="@color/gray_darker" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="@dimen/small_margin" android:layout_marginRight="@dimen/small_margin" />
            </LinearLayout>
            <TextView android:textSize="@dimen/medium_text" android:textColor="@color/black" android:id="@id/unitDespText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/box_margin" android:text="@string/unit_descriptive_text_mgdl_mmol" android:layout_weight="1.0" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>